cif/org.eclipse.escet.cif.tests/tests/checks/InvNoSpecificInvsCheckSubsets.cif.check.err
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 20, column 7: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 25, column 15: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 33, column 11: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 38, column 17: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 39, column 30: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 43, column 16: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 68, column 15: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 69, column 29: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 70, column 25: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 71, column 11: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 73, column 16: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 79, column 19: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 81, column 15: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 82, column 21: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 84, column 20: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 93, column 27: Duplicate invariant for event "e".
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  -------------------------------------------------------------------
  (1/2) Invariant is a plant 'needs' state/event exclusion invariant.
  -------------------------------------------------------------------
   * In the top-level scope of the specification:
     - plant invariant e needs true;
             ^
   * In location "different_locs.loc3":
     - plant invariant e needs true;
             ^
   * In group "g.p":
     - plant invariant e needs true;
             ^
   * In automaton "named_invs":
     - plant invariant I3: e needs true;
                       ^
   * In automaton "nameless_loc":
     - plant invariant e needs true;
             ^

  ---------------------------------------------------------------
  (2/2) Invariant is a requirement state invariant in a location.
  ---------------------------------------------------------------
   * In location "different_locs.loc4":
     - requirement invariant true;
                   ^
   * In automaton "named_invs":
     - requirement invariant I5: true;
                             ^
   * In automaton "nameless_loc":
     - requirement invariant true;
                   ^
